+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.
Please do not exceed 80 characters per line.
Latest changes go on top, different types of changes may be mixed.

Changes in ATK 6.3
------------------

Changes in prior versions
-------------------------
Changes in older ATK versions can be found at:
http://websvn.ibuildings.nl/wsvn/atk/atk/tags/release_6_2_0/doc/CHANGES